# 42-hackathon-nlp-llm-conversation-analytics

./: .gitignore  INTERVIEW_TASKS.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  api_layer.py  cache_manager.py  claude35.py  conversation_detector.py  conversation_metrics.py  data_processor.py  download_nltk_data.py  gpt4.py  pre_grouping_techniques.py  pyproject.toml  requirements.txt  setup.py  test_cache_manager.py  test_conversation_processor.py  test_data_processor.py  test_detectors.py
config/: model_config.yaml  setup.py
conversation_analytics/: advanced_processor.py  batch_processor.py  cache_manager.py  ground_truth_validation.py  model_evaluation.py  model_manager.py  scalable_processor.py  test_text_processor.py  text_processor.py
cursor_rules/: english-alignment.md
docker/: Dockerfile.base.reference  Dockerfile.claude  Dockerfile.gpt4  README.md
docs/: API.md  CONTRIBUTING.md  INTERVIEW_TASKS.md  OPTIMIZATION_README.md  PULL_REQUEST_TEMPLATE.md  README_ZYRA.md  pr_description.md
evaluation/: evaluate_topics.py  optimize_conversation_detection.py
evaluation_results/: adaboost_results.json  evaluation_report_20250321_1537.html  gradient_boosting_results.json  logistic_regression_results.json  svm_results.json
open_source_examples/: batch_model_config.yaml  batch_model_playground.py  model_config.yaml  model_playground.py  model_playground.py.orig  model_playground_htttp.py  temp_config.yaml
optimization/: experiment_models.py  pre_grouping_techniques.py  prompt_optimization.py
predictions/: predictions_deepseekv3_20250321_155612.csv
(+73 files in other folders)
